test/users/weili/tupleMisDetuple.chpl
var (Y,Z)=(1,2,3,4);
var (A,B,C,D)=(1,2);
